--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,18 +29,8 @@ jobs:
       - name: Authenticate on GCS
         uses: google-github-actions/setup-gcloud@master
         with:
-          version: "275.0.0"
-          service_account_email: ${{ secrets.GCP_SA_EMAIL }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
       - name: Upload
         run: gsutil -h "Cache-Control:public, max-age=31536000" cp -r ./curtis.wales/public/* gs://www.curtis.wales
-
-  purge:
-    runs-on: ubuntu-latest
-    needs: deploy
-    steps:
-      - name: Purge cache
-        uses: jakejarvis/cloudflare-purge-action@master
-        env:
-          CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
-          CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
